welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: not found: value h
  while(!(getY()==h)){
                  ^